<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AppInfoActivity">

    <include
        layout="@layout/main_navigation_toolbar"
        android:id="@+id/app_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/app_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/app_term_and_condition"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/title_TermAndPrivacyPolicy"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9b9595"
            android:contentDescription="@string/attribute_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/app_license"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_app_license"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9b9595"
            android:contentDescription="@string/attribute_line" />

    </LinearLayout>

</RelativeLayout>